# v-raptor

./: .env.example  .gitignore  .v-raptor.yml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh  run_tests.sh  run_web.py
docs/: advanced_usage.md
src/: chat_service.py  config.py  config_scanner.py  cve_linker.py  dashboard.py  database.py  dependency_scanner.py  di.py  language_detector.py  llm.py  orchestrator.py  osv.py  quality_scanner.py  report.py  sandbox.py  scanner.py  scheduler.py  secret_scanner.py  server.py  settings.py  vcs.py  vulnerability_processor.py  webhook_server.py  worker.py
src/llm_providers/: __init__.py  base.py  gemini.py  llama_cpp.py  ollama.py
src/quality_scanners/: __init__.py  base.py  cpp.py  go.py  javascript.py  python.py  ruby.py  rust.py
src/static/: style.css
src/templates/: _scans_table.html  config.html  dashboard.html  failed_job.html  failed_jobs.html  finding.html  findings.html  index.html  layout.html  quality.html  quality_interpretation.html  reports.html  reports_page.html  repository.html  scan.html  scans.html  select_branch.html
tests/: conftest.py  test_chat.py  test_dependency_scanner.py  test_language_detector.py  test_llm.py  test_main.py  test_orchestrator.py  test_quality_scanner.py  test_sandbox.py  test_scanner.py  test_server.py  test_vcs.py  test_vulnerability_processor.py  test_vulnerability_validation.py  test_worker.py
